--- a/index.html
+++ b/index.html
@@ -8,41 +8,40 @@
     <title>Momentum App</title>
   </head>
   <body>
-    <div class=".jb-box">
+    <div class="jb-box">
       <video src="" muted autoplay loop>
       </video>
+      <div id="wrap">
+        <h2 id="clock">00:00:00</h2>
+          <form class="hidden" id="login-form">
+            <input
+              required
+              maxlength="15"
+              type="text"
+              placeholder="Hi bro What's your name?"
+            />
+            <input type="submit" value="Log In" />
+          </form>
+          <h1 class="hidden" id="greeting"></h1>
+          <form id="todo-form">
+            <input type="text" placeholder="Write a To Do and Press Enter" required />
+          </form>
+          <ul id="todo-list"></ul>
+          <div id="quote">
+            <span></span><br>
+            <span></span>
+          </div>
+          <div id="weather">
+            <span></span>
+            <span></span>
+          </div>
+      </div>
     </div>
-    <div id="wrap">
-      <h2 id="clock">00:00:00</h2>
-        <form class="hidden" id="login-form">
-          <input
-            required
-            maxlength="15"
-            type="text"
-            placeholder="Hi bro What's your name?"
-          />
-          <input type="submit" value="Log In" />
-        </form>
-        <h1 class="hidden" id="greeting"></h1>
-        <form id="todo-form">
-          <input type="text" placeholder="Write a To Do and Press Enter" required />
-        </form>
-        <ul id="todo-list"></ul>
-        <div id="quote">
-          <span></span><br>
-          <span></span>
-        </div>
-        <div id="weather">
-          <span></span>
-          <span></span>
-        </div>
-        <script src="js/greetings.js"></script>
+  </body>
+  <script src="js/greetings.js"></script>
         <script src="js/clock.js"></script>
         <script src="js/quotes.js"></script>
         <script src="js/background.js"></script>
         <script src="js/todo.js"></script>
         <script src="js/weather.js"></script>
-    </div>
-    
-  </body>
 </html>
